--- a/interview-next-steps.html
+++ b/interview-next-steps.html
@@ -12,11 +12,11 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Social media tags -->
-  <meta property="og:title" content="Digital Shovel • Turn-Key Solutions">
+  <meta property="og:title" content="Digital Shovel • Recruitment">
   <meta property="og:description"
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
   <meta property="og:image" content="/images/backgrounds/meta-image.jpg">
-  <meta property="og:url" content="/turnkey-solutions.html">
+  <meta property="og:url" content="/recruitment.html">
   <meta property="og:site_name" content="Digital Shovel">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image:alt" content="Digital Shovel Logo">
@@ -36,17 +36,12 @@
       rel="stylesheet">
   </noscript>
 
-  <!-- GSAP -->
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-  <script defer src="/app/js/ScrollTrigger.min.js"></script>
-  <script defer src="/app/js/ScrollSmoother.min.js"></script>
-
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
-  <script defer src="/app/js/smooth-scroll.js"></script>
+  <script defer src="/app/js/smooth-scroll.min.js"></script>
 
-  <title>Digital Shovel • Turn-Key Solutions</title>
+  <title>Digital Shovel • Recruitment</title>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
@@ -213,183 +208,133 @@
     </div>
   </nav>
 
-  <div id="smooth-wrapper">
-    <div id="smooth-content">
-      <main class="main hero__main container container--lg">
-        <div class="animation">
-          <div class="animation__container">
-            <div class="star star-1"></div>
-            <div class="star star-2"></div>
-            <div class="star star-3"></div>
-            <div class="star star-4"></div>
-            <div class="star star-5"></div>
-            <div class="star star-6"></div>
-            <svg version="1.1" width="800px" height="800px" xmlns="http://www.w3.org/2000/svg" x="0" y="0"
-              viewBox="0 0 800 800">
-              <defs>
-                <filter id="mask-filter" filterUnits="userSpaceOnUse" x="0" y="-.5" width="801" height="801">
-                  <feColorMatrix values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0" />
-                </filter>
-              </defs>
-              <mask maskUnits="userSpaceOnUse" x="0" y="-.5" width="801" height="801" id="radial-gradient-mask">
-                <g style="filter:url(#mask-filter)">
-                  <radialGradient id="radial-gradient" cx="400" cy="400" r="400" gradientUnits="userSpaceOnUse">
-                    <stop offset="0" style="stop-color:#fff" />
-                    <stop offset=".9" style="stop-color:#000" />
-                  </radialGradient>
-                  <path style="fill:url(#radial-gradient)" d="M0 0h800v800H0z" />
-                </g>
-              </mask>
-              <g style="mask:url(#radial-gradient-mask)">
-                <g id="vertical">
-                  <path class="grid-lines"
-                    d="M.5 0v800M40.5 0v800M80.5 0v800M120.5 0v800M160.5 0v800M200.5 0v800M240.5 0v800M280.5 0v800M320.5 0v800M360.5 0v800M400.5 0v800M440.5 0v800M480.5 0v800M520.5 0v800M560.5 0v800M600.5 0v800M640.5 0v800M680.5 0v800M720.5 0v800M760.5 0v800M800.5 0v800" />
-                </g>
-                <g id="horizontal">
-                  <path class="grid-lines"
-                    d="M800.5 0H.5M800.5 40H.5M800.5 80H.5M800.5 120H.5M800.5 160H.5M800.5 200H.5M800.5 240H.5M800.5 280H.5M800.5 320H.5M800.5 360H.5M800.5 400H.5M800.5 440H.5M800.5 480H.5M800.5 520H.5M800.5 560H.5M800.5 600H.5M800.5 640H.5M800.5 680H.5M800.5 720H.5M800.5 760H.5M800.5 800H.5" />
-                </g>
-              </g>
-            </svg>
-          </div>
-        </div>
-        <section class="hero flex flex-col">
-          <div class="flex flex-col gap--sm">
-            <h1 class="hero__heading hero__heading--left">TURN-KEY SOLUTIONS</h1>
-            <p class="hero__body">Our turn-key solutions are designed to make your life easier by providing a
-              comprehensive and efficient
-              solution to your business needs. From start to finish, we'll handle all the details, so you can focus on
-              what
-              you do best.
-            </p>
-          </div>
-          <div class="flex flex-col--lg-tablet jc-sb gap--lg w-100">
-            <div class="turnkey__mining">
-              <h2>Start mining in</h2>
-              <h3>45 days</h3>
-              <h2>fully turn-key and managed</h4>
-            </div>
-            <div class="turnkey__watt-price">
-              <img src="images/icons/icon_coin.svg" alt="Dollar Coin">
-              <div class="flex flex-col">
-                <h4>6¢ - 7¢ <small>/ kWh</small></h4>
-                <span>Pricing based on volume</span>
+  <main class="main recruitment container container--lg">
+
+    <section class="hero recruitment__hero flex flex-col">
+      <div class="flex flex-col gap--sm">
+        <h1 class="hero__heading hero__heading--left">CONGRATULATIONS!</h1>
+        <p class="hero__body">You have successfully passed your first interview! You are now eligible to move on to the second round,
+          evaluating your technical skills.
+        </p>
+      </div>
+    </section>
+
+    <section class="recruitment__interviewers mtop--xl">
+      <div class="flex flex-col--lg-tablet jc-sb gap--lg">
+        <div class="flex flex-col gap--md">
+          <h2>YOUR INTERVIEWERS</h2>
+          <div class="flex flex-col--md-tablet gap--md">
+            <div class="flex flex-col gap--sm">
+              <img src="images/photos/team/scot-headshot.png" alt="Scot Johnson - CEO & President">
+              <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
+                <h3>Scot Johnson</h3>
+                  <span>CEO & President</span>
               </div>
+              <p>Scot Johnson is the CEO and President of Digital Shovel. He has over 10 years of experience as a
+                business owner, over 5 years in the technology sector and is passionate about innovation and efficiency
+                in the crypto industry.</p>
             </div>
-          </div>
-        </section>
-        <section class="grid grid__col-6 mtop--xl">
-          <div class="grid-item grid-turnkey__item-1">
-            <img src="images/icons/icon_land-lease_v2.svg" alt="Land Lease Icon">
-            <h5>Land Lease</h5>
-            <p>2-year lease with flat take-or-pay power contract inclusive. Fully prepped site with pad or piles
-              designed
-              specifically for the Digital Shovel Minipods.</p>
-          </div>
-          <div class="grid-item grid-turnkey__item-2">
-            <img src="images/icons/icon_transformer-hookup_v2.svg" alt="Transformer Hookup Icon">
-            <h5>Transformer Hookup</h5>
-            <p>Included in this offering is the hook-up of our medium voltage transformer to the low voltage switchgear
-              that
-              will feed the Minipods.</p>
-          </div>
-          <div class="grid-item grid-turnkey__item-3">
-            <img src="images/icons/icon_pod.svg" alt="Minipod Icon">
-            <h5>300kW Pod</h5>
-            <p>Contracts can be purchased in 300kW increments using our Minipod line. You must take an entire pod and
-              will
-              have VPN access to both the pod's miners, as well as the SmartPDU. At the end of the contract, YOU own the
-              Minipod.</p>
-          </div>
-          <div class="grid-item grid-turnkey__item-4">
-            <img src="images/icons/icon_forklift.svg" alt="Forklift Icon">
-            <h5>Deployment</h5>
-            <p>Deployment, configuration, and setup of your miners is included in the cost of this contract.</p>
-          </div>
-          <div class="grid-item grid-turnkey__item-5">
-            <img src="images/icons/icon_truck.svg" alt="Truck Icon">
-            <h5>Delivery</h5>
-            <p>Transportation of the pod to the mining farm is included in the cost of this contract.</p>
-          </div>
-        </section>
-        <section class="turnkey__pricing flex flex-col--lg-tablet jc-sb ai-c gap--xlg">
-          <div class="flex flex-col">
-            <h5>Power Deposit</h5>
-            <h2 class="flex ai-end gap--sm">$42k
-              <small class="text--dark-blue">/pod</small>
-            </h2>
-          </div>
-          <h2>+</h2>
-          <div class="flex flex-col">
-            <h5>Pod Deposit</h5>
-            <h2 class="flex ai-end gap--sm">$15k
-              <span class="flex flex-col gap--sm">
-                <small class="text--emphasis text--blue">+$2300/m</small>
-                <small class="text--dark-blue">for 12 months</small>
-              </span>
-            </h2>
-          </div>
-        </section>
-        <section class="turnkey__cta flex flex-col ai-c">
-          <a class="btn btn--primary" href="contact">Get Started
-            <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M7.49 6L7.5 6" />
-              <path d="M2.5 1L7.95455 6L2.5 11" />
-            </svg>
-          </a>
-          <h3>You own the pods at the end</h3>
-          <h4>*2 Year Minimum Commitment & Only 6MW Available</h4>
-        </section>
-      </main>
-      <footer class="footer">
-        <div class="container footer__container">
-          <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
-            <div class="footer__column">
-              <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
-                  alt="Digital Shovel Logo" /></a>
-              <p class="footer__body">
-                Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low
-                energy
-                cost, and high security, we help businesses with managed and unmanaged miner hosting.
-              </p>
-            </div>
-            <div class="footer__column">
-              <small class="footer__heading">Products</small>
-              <ul class="footer__list">
-                <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
-                <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-                <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
-                <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-                <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
-              </ul>
-            </div>
-            <div class="footer__column">
-              <small class="footer__heading">Navigation</small>
-              <ul class="footer__list">
-                <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
-                <li><a href="contact" class="footer__list-item">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer__divider"></div>
-          <div class="flex flex-col--lg-tablet jc-sb gap--sm">
-            <div class="flex flex-col--lg-tablet gap--sm">
-              <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
-            </div>
-            <div class="flex gap--sm ai-c">
-              <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
-                  src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
-              <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
-                  src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
-              <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
-                  src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
+            <div class="flex flex-col gap--sm">
+              <img src="images/photos/team/persia-diwali-headshot.png" alt="Persia Khodarahmi - Operations Manager">
+              <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
+                <h3>Persia Khodarahmi</h3>
+                  <span>Operations Manager</span>
+              </div>
+              <p>Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible for overseeing the
+                day-to-day operations and is passionate about delivering high-quality products and services to clients
+                and fostering a culture of excellence and collaboration.</p>
             </div>
           </div>
         </div>
-      </footer>
+      </div>
+    </section>
+
+    <section class="grid grid__col-6 mtop--xl">
+      <div class="grid-item grid-recruitment__item-1">
+        <img src="images/icons/icon_research.svg" alt="Research Icon">
+        <h5>Learn More About Us</h5>
+        <p>Research Digital Shovel and familiarize yourself with our products and services. This will help you prepare
+          for the interview and demonstrate your enthusiasm and fit for the role and our company.</p>
+      </div>
+      <div class="grid-item grid-recruitment__item-2">
+        <img src="images/icons/icon_chat-bubble.svg" alt="Elaborate Answers Icon">
+        <h5>Provide Elaborate Answers</h5>
+        <p>When answering interview questions, it is vital to provide elaborate answers that showcase your skills and
+          experience. Avoid giving one-word or yes/no responses that do not demonstrate your value or potential.</p>
+      </div>
+      <div class="grid-item grid-recruitment__item-3">
+        <img src="images/icons/icon_stars.svg" alt="STAR Statements Icon">
+        <h5>Use STAR Statements</h5>
+        <p>The STAR method is a technique to structure your answers to behavioral interview questions. It stands for
+          Situation, Task, Action and Result. By using the STAR method, you can showcase your skills and achievements
+          clearly and concisely.</p>
+      </div>
+      <div class="grid-item grid-recruitment__item-4">
+        <img src="images/icons/icon_document.svg" alt="Promote Professional Background Icon">
+        <h5>Professional Background</h5>
+        <p>We want to hear about your achievements, skills and experiences that are relevant to the role you applied
+          for. Don't be shy to promote yourself and show us why you are the best fit for our company.</p>
+      </div>
+      <div class="grid-item grid-recruitment__item-5">
+        <img src="images/icons/icon_pedestal.svg" alt="Position Motivations Icon">
+        <h5>Position Motivations</h5>
+        <p>We want to know why you are interested in working with us. Being clear about your motivations will help you
+          demonstrate your enthusiasm, fit and potential for the position.</p>
+      </div>
+      <div class="grid-item grid-recruitment__item-6">
+        <img src="images/icons/icon_suit.svg" alt="Business Suit Icon">
+        <h5>Dress Business Casual</h5>
+        <p>We recommend that you dress business casual for the occasion. Business casual means wearing clothes that are
+          neat and professional, but not too formal or stiff.</p>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+        <div class="footer__column">
+          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
+          <p class="footer__body">
+            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
+            cost, and high security, we help businesses with managed and unmanaged miner hosting.
+          </p>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Products</small>
+          <ul class="footer__list">
+            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
+            <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+            <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
+            <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <small class="footer__heading">Navigation</small>
+          <ul class="footer__list">
+            <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
+            <li><a href="contact" class="footer__list-item">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__divider"></div>
+      <div class="flex flex-col--lg-tablet jc-sb gap--sm">
+        <div class="flex flex-col--lg-tablet gap--sm">
+          <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
+        </div>
+        <div class="flex gap--sm ai-c">
+          <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
+              src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
+          <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
+              src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
+          <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
+              src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
+        </div>
+      </div>
     </div>
-  </div>
+  </footer>
 
 </body>
 
