--- a/m300.html
+++ b/m300.html
@@ -242,7 +242,7 @@
 
   <div id="smooth-wrapper">
     <div id="smooth-content">
-      <main class="main hero__m300">
+      <main class="main hero__main">
         <section id="product" class="hero container container--m300 flex flex-col ai-c">
           <div class="flex flex-col gap--sm ai-c">
             <div class="flex flex-col--sm-mobile ai-c gap--sm">
