--- a/recruitment.html
+++ b/recruitment.html
@@ -36,10 +36,15 @@
       rel="stylesheet">
   </noscript>
 
+  <!-- GSAP -->
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+  <script defer src="/app/js/ScrollTrigger.min.js"></script>
+  <script defer src="/app/js/ScrollSmoother.min.js"></script>
+
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
-  <script defer src="/app/js/smooth-scroll.min.js"></script>
+  <script defer src="/app/js/smooth-scroll.js"></script>
 
   <title>Digital Shovel • Recruitment</title>
 
@@ -208,133 +213,132 @@
     </div>
   </nav>
 
-  <main class="main recruitment container container--lg">
-
-    <section class="hero recruitment__hero flex flex-col">
-      <div class="flex flex-col gap--sm">
-        <h1 class="hero__heading hero__heading--left hero__heading--congrats">CONGRATULATIONS!</h1>
-        <p class="hero__body">You have successfully passed your first interview! You are now eligible to move on to the second round,
-          evaluating your technical skills.
-        </p>
-      </div>
-    </section>
-
-    <section class="recruitment__interviewers mtop--xl">
-      <div class="flex flex-col--lg-tablet jc-sb gap--lg">
-        <div class="flex flex-col gap--md">
-          <h2>YOUR INTERVIEWERS</h2>
-          <div class="flex flex-col--md-tablet gap--md">
-            <div class="flex flex-col gap--sm">
-              <img src="images/photos/team/scot-headshot.png" alt="Scot Johnson - CEO & President">
-              <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
-                <h3>Scot Johnson</h3>
-                  <span>CEO & President</span>
+  <div id="smooth-wrapper">
+    <div id="smooth-content">
+      <main class="main recruitment container container--lg">
+        <section class="hero recruitment__hero flex flex-col">
+          <div class="flex flex-col gap--sm">
+            <h1 class="hero__heading hero__heading--left">CONGRATULATIONS!</h1>
+            <p class="hero__body">You have successfully passed your first interview! You are now eligible to move on to the second round,
+              evaluating your technical skills.
+            </p>
+          </div>
+        </section>
+        <section class="recruitment__interviewers mtop--xl">
+          <div class="flex flex-col--lg-tablet jc-sb gap--lg">
+            <div class="flex flex-col gap--md">
+              <h2>YOUR INTERVIEWERS</h2>
+              <div class="flex flex-col--md-tablet gap--md">
+                <div class="flex flex-col gap--sm">
+                  <img src="images/photos/team/scot-headshot.png" alt="Scot Johnson - CEO & President">
+                  <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
+                    <h3>Scot Johnson</h3>
+                      <span>CEO & President</span>
+                  </div>
+                  <p>Scot Johnson is the CEO and President of Digital Shovel. He has over 10 years of experience as a
+                    business owner, over 5 years in the technology sector and is passionate about innovation and efficiency
+                    in the crypto industry.</p>
+                </div>
+                <div class="flex flex-col gap--sm">
+                  <img src="images/photos/team/persia-diwali-headshot.png" alt="Persia Khodarahmi - Operations Manager">
+                  <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
+                    <h3>Persia Khodarahmi</h3>
+                      <span>Operations Manager</span>
+                  </div>
+                  <p>Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible for overseeing the
+                    day-to-day operations and is passionate about delivering high-quality products and services to clients
+                    and fostering a culture of excellence and collaboration.</p>
+                </div>
               </div>
-              <p>Scot Johnson is the CEO and President of Digital Shovel. He has over 10 years of experience as a
-                business owner, over 5 years in the technology sector and is passionate about innovation and efficiency
-                in the crypto industry.</p>
             </div>
-            <div class="flex flex-col gap--sm">
-              <img src="images/photos/team/persia-diwali-headshot.png" alt="Persia Khodarahmi - Operations Manager">
-              <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
-                <h3>Persia Khodarahmi</h3>
-                  <span>Operations Manager</span>
-              </div>
-              <p>Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible for overseeing the
-                day-to-day operations and is passionate about delivering high-quality products and services to clients
-                and fostering a culture of excellence and collaboration.</p>
+          </div>
+        </section>
+        <section class="grid grid__col-6 mtop--xl">
+          <div class="grid-item grid-recruitment__item-1">
+            <img src="images/icons/icon_research.svg" alt="Research Icon">
+            <h5>Learn More About Us</h5>
+            <p>Research Digital Shovel and familiarize yourself with our products and services. This will help you prepare
+              for the interview and demonstrate your enthusiasm and fit for the role and our company.</p>
+          </div>
+          <div class="grid-item grid-recruitment__item-2">
+            <img src="images/icons/icon_chat-bubble.svg" alt="Elaborate Answers Icon">
+            <h5>Provide Elaborate Answers</h5>
+            <p>When answering interview questions, it is vital to provide elaborate answers that showcase your skills and
+              experience. Avoid giving one-word or yes/no responses that do not demonstrate your value or potential.</p>
+          </div>
+          <div class="grid-item grid-recruitment__item-3">
+            <img src="images/icons/icon_stars.svg" alt="STAR Statements Icon">
+            <h5>Use STAR Statements</h5>
+            <p>The STAR method is a technique to structure your answers to behavioral interview questions. It stands for
+              Situation, Task, Action and Result. By using the STAR method, you can showcase your skills and achievements
+              clearly and concisely.</p>
+          </div>
+          <div class="grid-item grid-recruitment__item-4">
+            <img src="images/icons/icon_document.svg" alt="Promote Professional Background Icon">
+            <h5>Professional Background</h5>
+            <p>We want to hear about your achievements, skills and experiences that are relevant to the role you applied
+              for. Don't be shy to promote yourself and show us why you are the best fit for our company.</p>
+          </div>
+          <div class="grid-item grid-recruitment__item-5">
+            <img src="images/icons/icon_pedestal.svg" alt="Position Motivations Icon">
+            <h5>Position Motivations</h5>
+            <p>We want to know why you are interested in working with us. Being clear about your motivations will help you
+              demonstrate your enthusiasm, fit and potential for the position.</p>
+          </div>
+          <div class="grid-item grid-recruitment__item-6">
+            <img src="images/icons/icon_suit.svg" alt="Business Suit Icon">
+            <h5>Dress Business Casual</h5>
+            <p>We recommend that you dress business casual for the occasion. Business casual means wearing clothes that are
+              neat and professional, but not too formal or stiff.</p>
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="container footer__container">
+          <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+            <div class="footer__column">
+              <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
+              <p class="footer__body">
+                Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
+                cost, and high security, we help businesses with managed and unmanaged miner hosting.
+              </p>
+            </div>
+            <div class="footer__column">
+              <small class="footer__heading">Products</small>
+              <ul class="footer__list">
+                <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
+                <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
+                <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+                <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
+                <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
+              </ul>
+            </div>
+            <div class="footer__column">
+              <small class="footer__heading">Navigation</small>
+              <ul class="footer__list">
+                <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
+                <li><a href="contact" class="footer__list-item">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__divider"></div>
+          <div class="flex flex-col--lg-tablet jc-sb gap--sm">
+            <div class="flex flex-col--lg-tablet gap--sm">
+              <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
+            </div>
+            <div class="flex gap--sm ai-c">
+              <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
+                  src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
+              <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
+                  src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
+              <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
+                  src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="grid grid__col-6 mtop--xl">
-      <div class="grid-item grid-recruitment__item-1">
-        <img src="images/icons/icon_research.svg" alt="Research Icon">
-        <h5>Learn More About Us</h5>
-        <p>Research Digital Shovel and familiarize yourself with our products and services. This will help you prepare
-          for the interview and demonstrate your enthusiasm and fit for the role and our company.</p>
-      </div>
-      <div class="grid-item grid-recruitment__item-2">
-        <img src="images/icons/icon_chat-bubble.svg" alt="Elaborate Answers Icon">
-        <h5>Provide Elaborate Answers</h5>
-        <p>When answering interview questions, it is vital to provide elaborate answers that showcase your skills and
-          experience. Avoid giving one-word or yes/no responses that do not demonstrate your value or potential.</p>
-      </div>
-      <div class="grid-item grid-recruitment__item-3">
-        <img src="images/icons/icon_stars.svg" alt="STAR Statements Icon">
-        <h5>Use STAR Statements</h5>
-        <p>The STAR method is a technique to structure your answers to behavioral interview questions. It stands for
-          Situation, Task, Action and Result. By using the STAR method, you can showcase your skills and achievements
-          clearly and concisely.</p>
-      </div>
-      <div class="grid-item grid-recruitment__item-4">
-        <img src="images/icons/icon_document.svg" alt="Promote Professional Background Icon">
-        <h5>Professional Background</h5>
-        <p>We want to hear about your achievements, skills and experiences that are relevant to the role you applied
-          for. Don't be shy to promote yourself and show us why you are the best fit for our company.</p>
-      </div>
-      <div class="grid-item grid-recruitment__item-5">
-        <img src="images/icons/icon_pedestal.svg" alt="Position Motivations Icon">
-        <h5>Position Motivations</h5>
-        <p>We want to know why you are interested in working with us. Being clear about your motivations will help you
-          demonstrate your enthusiasm, fit and potential for the position.</p>
-      </div>
-      <div class="grid-item grid-recruitment__item-6">
-        <img src="images/icons/icon_suit.svg" alt="Business Suit Icon">
-        <h5>Dress Business Casual</h5>
-        <p>We recommend that you dress business casual for the occasion. Business casual means wearing clothes that are
-          neat and professional, but not too formal or stiff.</p>
-      </div>
-    </section>
-
-  </main>
-
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
-        <div class="footer__column">
-          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
-          <p class="footer__body">
-            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
-            cost, and high security, we help businesses with managed and unmanaged miner hosting.
-          </p>
-        </div>
-        <div class="footer__column">
-          <small class="footer__heading">Products</small>
-          <ul class="footer__list">
-            <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
-            <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-            <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
-            <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-            <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
-          </ul>
-        </div>
-        <div class="footer__column">
-          <small class="footer__heading">Navigation</small>
-          <ul class="footer__list">
-            <li><a href="turnkey-solutions" class="footer__list-item">Turn-Key Solutions</a></li>
-            <li><a href="contact" class="footer__list-item">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer__divider"></div>
-      <div class="flex flex-col--lg-tablet jc-sb gap--sm">
-        <div class="flex flex-col--lg-tablet gap--sm">
-          <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
-        </div>
-        <div class="flex gap--sm ai-c">
-          <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
-              src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
-          <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
-              src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
-          <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
-              src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
-        </div>
-      </div>
+      </footer>
     </div>
-  </footer>
+  </div>
 
 </body>
 
