added recruitment page

--- a/interview-next-steps.html
+++ b/interview-next-steps.html
@@ -41,7 +41,7 @@
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/smooth-scroll.min.js"></script>
 
-  <title>Digital Shovel • Recruitment</title>
+  <title>Digital Shovel • Interview Next Steps</title>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
@@ -208,9 +208,9 @@
     </div>
   </nav>
 
-  <main class="main recruitment container container--lg">
+  <main class="main interview container container--lg">
 
-    <section class="hero recruitment__hero flex flex-col">
+    <section class="hero interview__hero flex flex-col">
       <div class="flex flex-col gap--sm">
         <h1 class="hero__heading hero__heading--left">CONGRATULATIONS!</h1>
         <p class="hero__body">You have successfully passed your first interview! You are now eligible to move on to the second round,
@@ -219,7 +219,7 @@
       </div>
     </section>
 
-    <section class="recruitment__interviewers mtop--xl">
+    <section class="interview__interviewers mtop--xl">
       <div class="flex flex-col--lg-tablet jc-sb gap--lg">
         <div class="flex flex-col gap--md">
           <h2>YOUR INTERVIEWERS</h2>
@@ -228,7 +228,7 @@
               <img src="images/photos/team/scot-headshot.png" alt="Scot Johnson - CEO & President">
               <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
                 <h3>Scot Johnson</h3>
-                  <span>CEO & President</span>
+                  <span class="label__pill">CEO & President</span>
               </div>
               <p>Scot Johnson is the CEO and President of Digital Shovel. He has over 10 years of experience as a
                 business owner, over 5 years in the technology sector and is passionate about innovation and efficiency
@@ -238,7 +238,7 @@
               <img src="images/photos/team/persia-diwali-headshot.png" alt="Persia Khodarahmi - Operations Manager">
               <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
                 <h3>Persia Khodarahmi</h3>
-                  <span>Operations Manager</span>
+                  <span class="label__pill">Operations Manager</span>
               </div>
               <p>Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible for overseeing the
                 day-to-day operations and is passionate about delivering high-quality products and services to clients
@@ -250,38 +250,38 @@
     </section>
 
     <section class="grid grid__col-6 mtop--xl">
-      <div class="grid-item grid-recruitment__item-1">
+      <div class="grid-item grid-interview__item-1">
         <img src="images/icons/icon_research.svg" alt="Research Icon">
         <h5>Learn More About Us</h5>
         <p>Research Digital Shovel and familiarize yourself with our products and services. This will help you prepare
           for the interview and demonstrate your enthusiasm and fit for the role and our company.</p>
       </div>
-      <div class="grid-item grid-recruitment__item-2">
+      <div class="grid-item grid-interview__item-2">
         <img src="images/icons/icon_chat-bubble.svg" alt="Elaborate Answers Icon">
         <h5>Provide Elaborate Answers</h5>
         <p>When answering interview questions, it is vital to provide elaborate answers that showcase your skills and
           experience. Avoid giving one-word or yes/no responses that do not demonstrate your value or potential.</p>
       </div>
-      <div class="grid-item grid-recruitment__item-3">
+      <div class="grid-item grid-interview__item-3">
         <img src="images/icons/icon_stars.svg" alt="STAR Statements Icon">
         <h5>Use STAR Statements</h5>
         <p>The STAR method is a technique to structure your answers to behavioral interview questions. It stands for
           Situation, Task, Action and Result. By using the STAR method, you can showcase your skills and achievements
           clearly and concisely.</p>
       </div>
-      <div class="grid-item grid-recruitment__item-4">
+      <div class="grid-item grid-interview__item-4">
         <img src="images/icons/icon_document.svg" alt="Promote Professional Background Icon">
         <h5>Professional Background</h5>
         <p>We want to hear about your achievements, skills and experiences that are relevant to the role you applied
           for. Don't be shy to promote yourself and show us why you are the best fit for our company.</p>
       </div>
-      <div class="grid-item grid-recruitment__item-5">
+      <div class="grid-item grid-interview__item-5">
         <img src="images/icons/icon_pedestal.svg" alt="Position Motivations Icon">
         <h5>Position Motivations</h5>
         <p>We want to know why you are interested in working with us. Being clear about your motivations will help you
           demonstrate your enthusiasm, fit and potential for the position.</p>
       </div>
-      <div class="grid-item grid-recruitment__item-6">
+      <div class="grid-item grid-interview__item-6">
         <img src="images/icons/icon_suit.svg" alt="Business Suit Icon">
         <h5>Dress Business Casual</h5>
         <p>We recommend that you dress business casual for the occasion. Business casual means wearing clothes that are
