adjusted manesha's text

--- a/recruitment.html
+++ b/recruitment.html
@@ -269,10 +269,7 @@
                 <h3>Manesha Persaud</h3>
                 <span class="label__pill">Talent Acquisition Coordinator</span>
               </div>
-              <p class="team__body">Persia Khodarahmi is the CEO and President of Digital Shovel. He has over 10 years
-                of experience as a
-                business owner, over 5 years in the technology sector and is passionate about innovation and efficiency
-                in the crypto industry.</p>
+              <p class="team__body">Manesha Persaud has over 4 years of driving company results with talent. She is truly passionate about attracting and retaining top talent to help the company thrive. She is dedicated to ensuring that our company consistently acquires the best professionals in the industry.</p>
             </div>
           </div>
         </section>
