--- a/index.html
+++ b/index.html
@@ -65,16 +65,6 @@
 
 <body>
 
-  <div class="topbar">
-    <span class="topbar__text">
-      <svg class="topbar__checkmark" width="32" height="32" viewBox="0 0 32 32" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <circle cx="16" cy="16" r="16" />
-        <path d="M22.2225 10.6665L12.4447 22.2221L8.88916 18.6665" />
-      </svg>
-      units available in Canada ready to be shipped</span>
-  </div>
-
   <nav class="navbar">
     <div class="navbar__container">
       <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
@@ -153,7 +143,7 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -200,7 +190,7 @@
                   </h5>
                   <small>Automation & Monitor</small>
                 </div>
-              </a>
+              </a> -->
             </div>
           </div>
         </li>
@@ -224,10 +214,6 @@
               <emphasis><span class="text-1">Revolutionary</span></emphasis> <br> <span class="text-2">crypto
                 mining</span> <span class="text-3">containers</span>
             </h1>
-            <a href="#" class="hero__event">
-              <small>26-28 July</small><small>•</small><small class="text--emphasis">Mining Disrupt
-                2023</small><small>•</small><small>Register now</small>
-            </a>
           </div>
           <div class="hero__content">
             <div class="hero__left-side">
@@ -838,9 +824,9 @@
               <ul class="footer__list">
                 <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
                 <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-                <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+                <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
                 <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-                <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
+                <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
               </ul>
             </div>
             <div class="footer__column">
