--- a/recruitment.html
+++ b/recruitment.html
@@ -63,16 +63,6 @@
 
 <body>
 
-  <div class="topbar">
-    <span class="topbar__text">
-      <svg class="topbar__checkmark" width="32" height="32" viewBox="0 0 32 32" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <circle cx="16" cy="16" r="16" />
-        <path d="M22.2225 10.6665L12.4447 22.2221L8.88916 18.6665" />
-      </svg>
-      units available in Canada ready to be shipped</span>
-  </div>
-
   <nav class="navbar">
     <div class="navbar__container">
       <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
@@ -151,7 +141,7 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -171,7 +161,7 @@
                 <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
-                    15k CFM Fan
+                    Fan
                     <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
@@ -198,7 +188,7 @@
                   </h5>
                   <small>Automation & Monitor</small>
                 </div>
-              </a>
+              </a> -->
             </div>
           </div>
         </li>
@@ -593,9 +583,9 @@
               <ul class="footer__list">
                 <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
                 <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-                <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+                <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
                 <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-                <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
+                <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
               </ul>
             </div>
             <div class="footer__column">
@@ -618,6 +608,8 @@
                   src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
               <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
                   src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
+              <a target="_blank" href="https://www.facebook.com/DigitalShovelInc/"><img class="footer__social"
+                  src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon"></a>
             </div>
           </div>
         </div>
