--- a/thanks.html
+++ b/thanks.html
@@ -59,16 +59,6 @@
 
 <body>
 
-  <div class="topbar">
-    <span class="topbar__text">
-      <svg class="topbar__checkmark" width="32" height="32" viewBox="0 0 32 32" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <circle cx="16" cy="16" r="16" />
-        <path d="M22.2225 10.6665L12.4447 22.2221L8.88916 18.6665" />
-      </svg>
-      units available in Canada ready to be shipped</span>
-  </div>
-
   <nav class="navbar">
     <div class="navbar__container">
       <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
@@ -116,7 +106,7 @@
           <div class="dropdown__menu-container">
             <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
               <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true" />
+                <img class="icon--md" src="images/icons/icon_navbar_m300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
                     M300 Minipod
@@ -132,7 +122,7 @@
                 </div>
               </a>
               <a class="dropdown__menu-item dropdown__link" href="i300" tabindex="-1" aria-role="menu-item">
-                <img class="icon--md" src="images/icons/icon_i300.svg" alt="Minipod Icon" aria-hidden="true" />
+                <img class="icon--md" src="images/icons/icon_navbar_i300.svg" alt="Minipod Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
                     i300 Minipod
@@ -147,6 +137,54 @@
                   <small>Indoor Solution</small>
                 </div>
               </a>
+              <!-- <a class="dropdown__menu-item dropdown__link" href="awning" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_awning.svg" alt="Awning Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    Awning
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Air-Intake Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="fan" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_fan.svg" alt="Fan Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    Fan
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Cooling Solution</small>
+                </div>
+              </a>
+              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    SmartPDU
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Automation & Monitor</small>
+                </div>
+              </a> -->
             </div>
           </div>
         </li>
@@ -187,9 +225,11 @@
     <div class="container footer__container">
       <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
+          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+              alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
-            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
+            Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low
+            energy
             cost, and high security, we help businesses with managed and unmanaged miner hosting.
           </p>
         </div>
@@ -198,9 +238,9 @@
           <ul class="footer__list">
             <li><a href="m300" class="footer__list-item">M300 Minipod</a></li>
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
-            <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
+            <!-- <li><a href="i300" class="footer__list-item">Air-Intake Awnings</a></li>
             <li><a href="i300" class="footer__list-item">Cooling Fans</a></li>
-            <li><a href="i300" class="footer__list-item">SmartPDU</a></li>
+            <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
@@ -223,6 +263,8 @@
               src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
           <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
               src="images/icons/icon_linkedin.svg" alt="LinkedIn Logo Icon"></a>
+          <a target="_blank" href="https://www.facebook.com/DigitalShovelInc/"><img class="footer__social"
+              src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon"></a>
         </div>
       </div>
     </div>
