fixed gallery, subnav, and refactored hero & spacing

--- a/i300.html
+++ b/i300.html
@@ -210,13 +210,13 @@
     <div class="subnav__container">
       <ul class="subnav__links">
         <li>
-          <a class="subnav__link subnav__link--product subnav__link--active" href="#product">Product</a>
+          <a class="subnav__link subnav__link--product subnav__link--active">Product</a>
         </li>
         <li>
-          <a class="subnav__link subnav__link--specs" href="#specifications">Specifications</a>
+          <a class="subnav__link subnav__link--specs">Specifications</a>
         </li>
         <li>
-          <a class="subnav__link subnav__link--bundle" href="#bundle">Bundle</a>
+          <a class="subnav__link subnav__link--bundle">Bundle</a>
         </li>
       </ul>
     </div>
@@ -225,7 +225,7 @@
   <div id="smooth-wrapper">
     <div id="smooth-content">
       <main class="main">
-        <section id="product" class="hero hero__main container container--i300 flex flex-col ai-c">
+        <section id="product" class="container container--subnav container--i300 flex flex-col ai-c">
           <div class="flex flex-col ai-c gap--sm">
             <div class="flex flex-col--lg-tablet ai-c gap--sm">
               <h4>Indoor Solution</h4>
