--- a/index.html
+++ b/index.html
@@ -208,13 +208,11 @@
   <div id="smooth-wrapper">
     <div id="smooth-content">
       <main class="main">
-        <section class="hero container container--md hero__main">
-          <div class="flex flex-col ai-c gap--md">
-            <h1 class="hero__heading hero__heading--sm-width">
-              <emphasis><span class="text-1">Revolutionary</span></emphasis> <br> <span class="text-2">crypto
-                mining</span> <span class="text-3">containers</span>
-            </h1>
-          </div>
+        <section class="hero container container--navbar">
+          <h1 class="hero__heading hero__heading--sm-width">
+            <emphasis><span class="text-1">Revolutionary</span></emphasis> <br> <span class="text-2">crypto
+              mining</span> <span class="text-3">containers</span>
+          </h1>
           <div class="hero__content">
             <div class="hero__left-side">
               <iframe class="hero__video" width="490" height="275"
