--- a/m300.html
+++ b/m300.html
@@ -233,8 +233,8 @@
 
   <div id="smooth-wrapper">
     <div id="smooth-content">
-      <main class="main hero__main">
-        <section id="product" class="hero container container--m300 flex flex-col ai-c">
+      <main class="main">
+        <section id="product" class="hero container container--subnav container--m300 flex flex-col ai-c">
           <div class="flex flex-col gap--sm ai-c">
             <div class="flex flex-col--sm-mobile ai-c gap--sm">
               <h4>Outdoor Solution</h4>
