--- a/recruitment.html
+++ b/recruitment.html
@@ -205,7 +205,7 @@
 
   <div id="smooth-wrapper">
     <div id="smooth-content">
-      <main class="main hero__main recruitment container container--lg">
+      <main class="main recruitment container container--navbar">
         <!-- About Us -->
         <section class="about flex flex-col">
           <div class="flex flex-col ai-c gap--md">
