--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -205,7 +205,34 @@
 
   <div id="smooth-wrapper">
     <div id="smooth-content">
-      <main class="main hero__main container container--lg">
+      <main class="main container container--navbar">
+        
+        <section class="flex flex-col gap--xlg">
+          <div class="flex flex-col gap--sm">
+            <h1 class="hero__heading hero__heading--left">TURN-KEY SOLUTIONS</h1>
+            <p class="hero__body">Our turn-key solutions are designed to make your life easier by providing a
+              comprehensive and efficient
+              solution to your business needs. From start to finish, we'll handle all the details, so you can focus on
+              what
+              you do best.
+            </p>
+          </div>
+          <div class="flex flex-col--lg-tablet jc-sb gap--lg w-100">
+            <div class="turnkey__mining">
+              <h2>Start mining in</h2>
+              <h3>45 days</h3>
+              <h2>fully turn-key and managed</h4>
+            </div>
+            <div class="turnkey__watt-price">
+              <img src="images/icons/icon_coin.svg" alt="Dollar Coin">
+              <div class="flex flex-col">
+                <h4>6¢ - 7¢ <small>/ kWh</small></h4>
+                <span>Pricing based on volume</span>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <div class="animation">
           <div class="animation__container">
             <div class="star star-1"></div>
@@ -243,31 +270,7 @@
             </svg>
           </div>
         </div>
-        <section class="hero flex flex-col">
-          <div class="flex flex-col gap--sm">
-            <h1 class="hero__heading hero__heading--left">TURN-KEY SOLUTIONS</h1>
-            <p class="hero__body">Our turn-key solutions are designed to make your life easier by providing a
-              comprehensive and efficient
-              solution to your business needs. From start to finish, we'll handle all the details, so you can focus on
-              what
-              you do best.
-            </p>
-          </div>
-          <div class="flex flex-col--lg-tablet jc-sb gap--lg w-100">
-            <div class="turnkey__mining">
-              <h2>Start mining in</h2>
-              <h3>45 days</h3>
-              <h2>fully turn-key and managed</h4>
-            </div>
-            <div class="turnkey__watt-price">
-              <img src="images/icons/icon_coin.svg" alt="Dollar Coin">
-              <div class="flex flex-col">
-                <h4>6¢ - 7¢ <small>/ kWh</small></h4>
-                <span>Pricing based on volume</span>
-              </div>
-            </div>
-          </div>
-        </section>
+
         <section class="grid grid__col-6 mtop--xl">
           <div class="grid-item grid-turnkey__item-1">
             <img class="grid-item__icon" src="images/icons/icon_land-lease_v2.svg" alt="Land Lease Icon">
@@ -302,6 +305,7 @@
             <p>Transportation of the pod to the mining farm is included in the cost of this contract.</p>
           </div>
         </section>
+
         <section class="turnkey__pricing flex flex-col--lg-tablet jc-sb ai-c gap--xlg">
           <div class="flex flex-col">
             <h5>Power Deposit</h5>
