fixed the gallery modal

--- a/i300.html
+++ b/i300.html
@@ -47,7 +47,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js"></script>
-  <script defer src="/app/js/scroll-animations-i300.js"></script>
+  <script defer src="/app/js/scroll-animations-i300.js?v=1.0"></script>
 
   <title>Digital Shovel • i300 Minipod</title>
 
