js version update

--- a/m300.html
+++ b/m300.html
@@ -46,7 +46,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/bear-market-promo.js"></script>
-  <script defer src="/app/js/gallery.js"></script>
+  <script defer src="/app/js/gallery.js?v=1.0"></script>
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/scroll-animations-m300.js"></script>
 
