minor change to i300 page

--- a/i300.html
+++ b/i300.html
@@ -227,7 +227,7 @@
       <main class="main">
         <section id="product" class="container container--subnav container--i300 flex flex-col ai-c">
           <div class="flex flex-col ai-c gap--sm">
-            <div class="flex flex-col--lg-tablet ai-c gap--sm">
+            <div class="flex flex-col--sm-mobile ai-c gap--sm">
               <h4>Indoor Solution</h4>
               <a href="m300" class="btn btn--switch">switch to outdoor
                 <svg class="switch-icon" width="23" height="22" viewBox="0 0 23 22" fill="none"
