minor design changes to recruitment

--- a/recruitment.html
+++ b/recruitment.html
@@ -555,7 +555,7 @@
             <p class="text--center">Given our rapid growth over the years, we are always interested in hiring driven and
               hard-working people that fit our environment.<br>Check out our job postings, we encourage you to apply to
               any position that fits your skill-set!</p>
-            <a class="btn btn--primary" href="#">Job Postings
+            <a class="btn btn--primary" href="https://ca.indeed.com/cmp/Digital-Shovel/jobs">Job Postings
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
