--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
   <div id="smooth-wrapper">
     <div id="smooth-content">
       <main class="main">
-        <section class="container container--navbar flex jc-sb">
+        <section class="container container--navbar flex flex-col--lg-tablet jc-sb gap--md">
           <div class="flex flex-col gap--lg">
             <h1 class="hero__heading">Contact <emphasis class="text--blue">Sales</emphasis>
             </h1>
