fixed the sizing on the minipods

--- a/m300.html
+++ b/m300.html
@@ -496,6 +496,7 @@
             </div>
           </div>
         </section>
+
         <a class="scroll scroll__m300">
           <span class="scroll__text">scroll for more</span>
           <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -503,6 +504,7 @@
             <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
         </a>
+
         <section id="specifications" class="card__grid">
           <div class="card-1 card__list flex flex-col gap--md">
             <div class="flex gap--sm ai-c">
@@ -604,6 +606,7 @@
             </div>
           </div>
         </section>
+
         <section id="bundle" class="bundle">
           <div class="container flex flex-col gap--md ai-c jc-c">
             <h2 class="text__heading"><span class="text--blue">Bundled</span> with your Minipod</h2>
@@ -616,13 +619,14 @@
             </div>
           </div>
         </section>
+
         <section id="pricing" class="pricing">
           <div class="container flex flex-col gap--md ai-c">
             <h2 class="text__heading">Configurations & <span class="text--blue">Pricing</span></h2>
             <p class="text__body text--center">Our modular design allows Minipods to be customized into a set of units and
               addons that fit your needs best.</p>
             <div class="flex flex-col gap--xlg mtop--xxl">
-              <div class="pricing__set gap--lg ai-end jc-c">
+              <div class="pricing__set pricing__set-1 gap--lg ai-end jc-c">
                 <img class="pricing__set-img" src="images/illustrations/minipod-1unit.svg"
                   alt="Minipod Single Unit Illustration" />
                 <div class="pricing__set-text flex flex-col gap--sm ai-c">
