--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <script defer src="/app/js/home.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
-  <script defer src="/app/js/scroll-animations-home.js"></script>
+  <script defer src="/app/js/scroll-animations-home.js?v=1.0"></script>
 
   <title>Digital Shovel</title>
 
